fix(bug): "If the link wraps over a line in the sidebar, the hover text is squeezed into a tall, one-character wide column" #29

--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -13,10 +13,12 @@ body>div#root>div>main>div#app-container>div {
       top: 0;
       left: 0;
       z-index: var(--ls-z-index-level-3);
-      overflow: auto;
+      overflow: visible;
       margin: -.4em auto;
       position: absolute;
-      display: none
+      display: none;
+      height: fit-content;
+      word-break: keep-all;
     }
 
     &:hover::before {
